--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "lint": "eslint ./src --ext .ts,.tsx",
+        "eject": "react-scripts eject",
+        "prepare": "husky install"
     },
     "eslintConfig": {
         "extends": [
@@ -25,6 +27,12 @@
             "last 1 safari version"
         ]
     },
+    "lint-staged": {
+        "*.js": [
+            "eslint",
+            "prettier --write"
+        ]
+    },
     "dependencies": {
         "@types/node": "16.18.3",
         "@types/react": "18.0.25",
@@ -36,14 +44,16 @@
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "5.43.0",
         "@typescript-eslint/parser": "5.43.0",
-        "eslint": "^8.27.0",
-        "eslint-config-airbnb": "^19.0.4",
+        "eslint": "8.27.0",
+        "eslint-config-airbnb": "19.0.4",
         "eslint-config-prettier": "8.5.0",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-jsx-a11y": "^6.6.1",
+        "eslint-plugin-import": "2.26.0",
+        "eslint-plugin-jsx-a11y": "6.6.1",
         "eslint-plugin-prettier": "4.2.1",
-        "eslint-plugin-react": "^7.31.10",
-        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react": "7.31.10",
+        "eslint-plugin-react-hooks": "4.6.0",
+        "husky": "8.0.0",
+        "lint-staged": "13.0.3",
         "prettier": "2.7.1",
         "typescript": "4.9.3"
     }
