--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
         "no-undef": "off",
         "react/jsx-filename-extension": ["warn", { "extensions": [".ts", ".tsx"] }],
         "react/jsx-boolean-value": ["warn", "always"],
+        "react/require-default-props": "off",
         "import/extensions": ["warn", "never"],
         "import/no-unresolved": "off",
         "import/prefer-default-export": "off"
