--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
         "@emotion/styled": "11.10.5",
         "@fontsource/roboto": "4.5.8",
         "@mui/material": "5.10.14",
+        "@types/memoize-one": "^5.1.2",
         "@types/node": "16.18.3",
         "@types/react": "18.0.25",
         "@types/react-dom": "18.0.9",
+        "memoize-one": "6.0.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-router-dom": "6.4.3",
